--- a/angular.json
+++ b/angular.json
@@ -46,6 +46,15 @@
               ],
               "outputHashing": "all"
             },
+            "staging" : {
+
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.staging.ts"
+                }
+              ]
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
